# Ratatouai

./: .gitignore  README.md  main.py  pyproject.toml  recipe_types.py  requirements.txt
Utils/: model_utils.py  prompts.py  ratgraph.py  streamlit_utils.py
ratatouai/: .gitignore  requirements.txt
ratatouai/ratatouai/Utils/: prompts.py  streamlit_utils.py
