[tool.poetry]
name = "ratatouai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-anthropic = "^0.1.11"
langchain = "^0.1.20"
pillow = "^10.3.0"
ipython = "^8.24.0"
langchain-community = "^0.0.38"
pydantic = "^2.7.1"
langchain-core = "^0.1.52"
streamlit = "^1.34.0"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.6"
langsmith = "^0.1.60"
screeninfo = "^0.8.1"
streamlit-js-eval = "^0.1.7"
jsondiff = "^2.0.0"
deepdiff = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
